--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "quick-react",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "cz-customizable": "^6.2.0"
+  },
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "commit": "node ./node_modules/cz-customizable/standalone.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
